Polish scenario plots

--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -212,8 +212,7 @@
    "outputs": [],
    "source": [
     "# Plot all loops\n",
-    "%run -i functions.py\n",
-    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops, max_node_size=100)\n",
+    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops)\n",
     "fig = plot_dk_gdf(\n",
     "    nodes,\n",
     "    edges,\n",
@@ -236,82 +235,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b77735f4-51b8-473f-b5b9-4d5577322abc",
-   "metadata": {},
-   "source": [
-    "### Max slopes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "045eded7-db81-4d0f-aee2-f47f6bf7fe3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "linkmaxslopes = [e[\"max_slope\"] for e in G.es]\n",
-    "fig = plt.figure(figsize=(4, 3))\n",
-    "axes = fig.add_axes([0.16, 0.16, 0.76, 0.75])\n",
-    "\n",
-    "histxy = axes.hist(linkmaxslopes, bins=[i / 4 for i in list(range(32))], density=False)\n",
-    "axes.plot(\n",
-    "    [SCENARIO[SCENARIOID][\"maxslope_limit\"], SCENARIO[SCENARIOID][\"maxslope_limit\"]],\n",
-    "    [0, max(histxy[0])],\n",
-    "    \":r\",\n",
-    ")\n",
-    "axes.text(\n",
-    "    SCENARIO[SCENARIOID][\"maxslope_limit\"] * 0.95,\n",
-    "    max(histxy[0]),\n",
-    "    str(\n",
-    "        round(\n",
-    "            len(\n",
-    "                [\n",
-    "                    i\n",
-    "                    for i, x in enumerate(linkmaxslopes)\n",
-    "                    if (x < SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
-    "                ]\n",
-    "            )\n",
-    "            / len(linkmaxslopes)\n",
-    "            * 100\n",
-    "        )\n",
-    "    )\n",
-    "    + \"%\",\n",
-    "    horizontalalignment=\"right\",\n",
-    "    verticalalignment=\"top\",\n",
-    ")\n",
-    "axes.text(\n",
-    "    SCENARIO[SCENARIOID][\"maxslope_limit\"] * 1.05,\n",
-    "    max(histxy[0]),\n",
-    "    str(\n",
-    "        round(\n",
-    "            len(\n",
-    "                [\n",
-    "                    i\n",
-    "                    for i, x in enumerate(linkmaxslopes)\n",
-    "                    if (x >= SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
-    "                ]\n",
-    "            )\n",
-    "            / len(linkmaxslopes)\n",
-    "            * 100\n",
-    "        )\n",
-    "    )\n",
-    "    + \"%\",\n",
-    "    horizontalalignment=\"left\",\n",
-    "    verticalalignment=\"top\",\n",
-    "    color=\"red\",\n",
-    ")\n",
-    "axes.set_xlabel(\"Max slope [%]\")\n",
-    "axes.set_ylabel(\"Frequency\")\n",
-    "axes.set_title(\"Link max slopes\")\n",
-    "axes.set_xlim([0, 8])\n",
-    "\n",
-    "fig.savefig(\n",
-    "    PATH[\"plot\"] + \"maxslopes_maxslope\" + str(SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3fa49509-bb82-471c-a6f3-4aaed38086fa",
    "metadata": {},
    "source": [
@@ -327,11 +250,14 @@
    "source": [
     "allloops_bound = {}\n",
     "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario lengths\"):\n",
-    "    lengths_this = allloops[sourcenode][\"lengths\"] * MPERUNIT\n",
-    "    mask_this = (lengths_this >= SCENARIO[SCENARIOID][\"looplength_min\"]) & (\n",
-    "        lengths_this <= SCENARIO[SCENARIOID][\"looplength_max\"]\n",
-    "    )\n",
-    "    allloops_bound[sourcenode] = mask_node(allloops[sourcenode], mask_this)"
+    "    try:\n",
+    "        lengths_this = allloops[sourcenode][\"lengths\"] * MPERUNIT\n",
+    "        mask_this = (lengths_this >= SCENARIO[SCENARIOID][\"looplength_min\"]) & (\n",
+    "            lengths_this <= SCENARIO[SCENARIOID][\"looplength_max\"]\n",
+    "        )\n",
+    "        allloops_bound[sourcenode] = mask_node(allloops[sourcenode], mask_this)\n",
+    "    except:  # Account for 0 loop nodes\n",
+    "        allloops_bound[sourcenode] = {}"
    ]
   },
   {
@@ -341,24 +267,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes, numloops_max = get_vertex_sizes(allloops_bound)\n",
-    "fig = plot_check(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
+    "# Plot all bounded loops\n",
+    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound)\n",
+    "fig = plot_dk_gdf(\n",
+    "    nodes,\n",
+    "    edges,\n",
+    "    scale=1,\n",
     "    vertex_size=vertex_sizes,\n",
-    "    edge_width=get_edgewidth_constant(G.ecount()),\n",
+    "    vertex_color=vertex_colors,\n",
+    "    link_width=0.3,\n",
+    "    link_color=\"#444444\",\n",
     ")\n",
-    "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
-    "plt.tight_layout()\n",
-    "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
     "    + str(SCENARIO[SCENARIOID][\"looplength_min\"])\n",
     "    + \"to\"\n",
     "    + str(SCENARIO[SCENARIOID][\"looplength_max\"])\n",
-    "    + logtextsave\n",
     ")"
    ]
   },
