Plot restricted by max slope

--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -278,6 +278,7 @@
     "    link_width=0.3,\n",
     "    link_color=\"#444444\",\n",
     ")\n",
+    "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
@@ -302,16 +303,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound = {}\n",
-    "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario gradients\"):\n",
-    "    lengths_this = allloops[sourcenode][\"lengths\"] * MPERUNIT\n",
-    "    maxslopes_this = (\n",
-    "        allloops[sourcenode][\"max_slopes\"] / 100.0\n",
-    "    )  # max_slopes were multiplied by 100 for storage as uint16\n",
-    "    mask_this = lengths_this >= SCENARIO[SCENARIOID][\"looplength_min\"]\n",
-    "    mask_this &= lengths_this <= SCENARIO[SCENARIOID][\"looplength_max\"]\n",
-    "    mask_this &= maxslopes_this <= SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
-    "    allloops_bound[sourcenode] = mask_node(allloops[sourcenode], mask_this)"
+    "allloops_bound_sloped = {}\n",
+    "for sourcenode in tqdm(allloops_bound, desc=\"Restrict to scenario gradients\"):\n",
+    "    try:\n",
+    "        lengths_this = allloops[sourcenode][\"lengths\"] * MPERUNIT\n",
+    "        maxslopes_this = (\n",
+    "            allloops[sourcenode][\"max_slopes\"] / 100.0\n",
+    "        )  # max_slopes were multiplied by 100 for storage as uint16\n",
+    "        mask_this = lengths_this >= SCENARIO[SCENARIOID][\"looplength_min\"]\n",
+    "        mask_this &= lengths_this <= SCENARIO[SCENARIOID][\"looplength_max\"]\n",
+    "        mask_this &= maxslopes_this <= SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
+    "        allloops_bound_sloped[sourcenode] = mask_node(allloops[sourcenode], mask_this)\n",
+    "    except:  # Account for 0 loop nodes\n",
+    "        allloops_bound_sloped[sourcenode] = {}"
    ]
   },
   {
@@ -321,31 +325,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes, numloops_max = get_vertex_sizes(allloops_bound)\n",
-    "\n",
-    "edge_colors = []\n",
-    "for e in G.es:\n",
-    "    if e[\"max_slope\"] > SCENARIO[SCENARIOID][\"maxslope_limit\"]:\n",
-    "        edge_colors.append(\"red\")\n",
-    "    else:\n",
-    "        edge_colors.append(\"grey\")\n",
-    "\n",
-    "fig = plot_check(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
+    "%run -i functions.py\n",
+    "# Plot all bounded sloped loops\n",
+    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound_sloped)\n",
+    "link_widths, link_colors = get_link_plotinfo(\n",
+    "    edges, SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
+    ")\n",
+    "fig = plot_dk_gdf(\n",
+    "    nodes,\n",
+    "    edges,\n",
+    "    scale=1,\n",
     "    vertex_size=vertex_sizes,\n",
-    "    edge_color=edge_colors,\n",
-    "    edge_width=get_edgewidth_constant(G.ecount()),\n",
+    "    vertex_color=vertex_colors,\n",
+    "    link_width=link_widths,\n",
+    "    link_color=link_colors,\n",
     ")\n",
-    "plt.text(\n",
-    "    0,\n",
-    "    0.12,\n",
-    "    \"Red: Gradient >\" + str(SCENARIO[SCENARIOID][\"maxslope_limit\"]) + \"%\",\n",
-    "    fontsize=8,\n",
-    ")\n",
-    "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
-    "plt.tight_layout()\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
@@ -355,7 +349,6 @@
     "    + str(SCENARIO[SCENARIOID][\"looplength_max\"])\n",
     "    + \"_maxslope\"\n",
     "    + str(SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
-    "    + logtextsave\n",
     ")"
    ]
   },
