--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -48,9 +48,10 @@
    "id": "ebe47e89-ae8b-4262-8c2a-5048c5459403",
    "metadata": {},
    "source": [
-    "- [ ] Polish nw plotting: colors, proj, transparency, keep values fixed\n",
+    "- [X] Polish nw plotting: colors, proj, transparency, keep values fixed\n",
     "- [ ] Study ideal knude net (triangle grid,..). What is an ideal knude network? Geometric consistency of DKNT design principles?\n",
-    "- [ ] Distribution/spatial clustering of slopes, pois in DK. How does it affect loops? Compare with random redistribution. Easy to add few POIS to dramatically increase coverage? \"identify/fix POI deserts\""
+    "- [ ] Distribution/spatial clustering of slopes, pois in DK. How does it affect loops? Compare with random redistribution. Easy to add few POIS to dramatically increase coverage? \"identify/fix POI deserts\"\n",
+    "- [ ] Is node density a proxy for loop census size?"
    ]
   },
   {
@@ -325,11 +326,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -i functions.py\n",
     "# Plot all bounded sloped loops\n",
     "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound_sloped)\n",
     "link_widths, link_colors = get_link_plotinfo(\n",
-    "    edges, SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
+    "    edges,\n",
+    "    var_bad=\"max_slope\",\n",
+    "    var_good=None,\n",
+    "    threshold_bad=SCENARIO[SCENARIOID][\"maxslope_limit\"],\n",
     ")\n",
     "fig = plot_dk_gdf(\n",
     "    nodes,\n",
@@ -367,29 +370,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound_watered = {}\n",
-    "for sourcenode in allloops_bound:\n",
-    "    numloops = len(allloops_bound[sourcenode][\"loops\"])\n",
-    "    mask_this = [True] * numloops\n",
-    "    for i in range(numloops):\n",
-    "        wp = allloops_bound[sourcenode][\"water_profile\"][i]\n",
-    "        water_enough = True\n",
-    "        if wp:  # There is water on the way somewhere. Check distances\n",
-    "            for w in wp:\n",
-    "                if w > WATERLENGTH_MAX:\n",
+    "allloops_bound_sloped_watered = {}\n",
+    "for sourcenode in allloops_bound_sloped:\n",
+    "    try:\n",
+    "        numloops = len(allloops_bound_sloped[sourcenode][\"loops\"])\n",
+    "        mask_this = [True] * numloops\n",
+    "        for i in range(numloops):\n",
+    "            wp = allloops_bound_sloped[sourcenode][\"water_profile\"][i]\n",
+    "            water_enough = True\n",
+    "            if wp:  # There is water on the way somewhere. Check distances\n",
+    "                for w in wp:\n",
+    "                    if w > WATERLENGTH_MAX:\n",
+    "                        water_enough = False\n",
+    "                        break\n",
+    "                if water_enough and (\n",
+    "                    allloops_bound_sloped[sourcenode][\"lengths\"][i] - wp[-1]\n",
+    "                    > WATERLENGTH_MAX\n",
+    "                ):\n",
     "                    water_enough = False\n",
-    "                    break\n",
-    "            if water_enough and (\n",
-    "                allloops_bound[sourcenode][\"lengths\"][i] - wp[-1] > WATERLENGTH_MAX\n",
-    "            ):\n",
-    "                water_enough = False\n",
-    "        else:  # No water on the way, so the loop is only valid if short enough\n",
-    "            if allloops_bound[sourcenode][\"lengths\"][i] > WATERLENGTH_MAX:\n",
-    "                water_enough = False\n",
-    "        mask_this[i] = water_enough\n",
-    "    allloops_bound_watered[sourcenode] = mask_node(\n",
-    "        allloops_bound[sourcenode], mask_this\n",
-    "    )"
+    "            else:  # No water on the way, so the loop is only valid if short enough\n",
+    "                if allloops_bound_sloped[sourcenode][\"lengths\"][i] > WATERLENGTH_MAX:\n",
+    "                    water_enough = False\n",
+    "            mask_this[i] = water_enough\n",
+    "        allloops_bound_sloped_watered[sourcenode] = mask_node(\n",
+    "            allloops_bound_sloped[sourcenode], mask_this\n",
+    "        )\n",
+    "    except:  # Account for 0 loop nodes\n",
+    "        allloops_bound_sloped_watered[sourcenode] = {}"
    ]
   },
   {
@@ -399,52 +406,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes, numloops_max = get_vertex_sizes(allloops_bound_watered)\n",
-    "\n",
-    "edge_colors = []\n",
-    "for e in G.es:\n",
-    "    if (\n",
-    "        e[\"max_slope\"] > SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
-    "    ):  # and not e[\"has_water\"]:\n",
-    "        edge_colors.append(\"red\")\n",
-    "    # elif e[\"max_slope\"] > SCENARIO[SCENARIOID][\"maxslope_limit\"] and e[\"has_water\"]:\n",
-    "    #     edge_colors.append(\"orange\")\n",
-    "    elif e[\"max_slope\"] <= SCENARIO[SCENARIOID][\"maxslope_limit\"] and e[\"has_water\"]:\n",
-    "        edge_colors.append(\"blue\")\n",
-    "    else:\n",
-    "        edge_colors.append(\"grey\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46ebeaf5-8874-4704-a0e4-11386fb044ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plot_check(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
+    "# Plot all bounded sloped loops\n",
+    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound_sloped_watered)\n",
+    "link_widths, link_colors = get_link_plotinfo(\n",
+    "    edges,\n",
+    "    var_bad=\"max_slope\",\n",
+    "    var_good=\"poi_diversity\",\n",
+    "    threshold_bad=SCENARIO[SCENARIOID][\"maxslope_limit\"],\n",
+    "    threshold_good=1,\n",
+    ")\n",
+    "fig = plot_dk_gdf(\n",
+    "    nodes,\n",
+    "    edges,\n",
+    "    scale=1,\n",
     "    vertex_size=vertex_sizes,\n",
-    "    edge_color=edge_colors,\n",
-    "    edge_width=get_edgewidth_constant(G.ecount()),\n",
+    "    vertex_color=vertex_colors,\n",
+    "    link_width=link_widths,\n",
+    "    link_color=link_colors,\n",
     ")\n",
-    "plt.text(\n",
-    "    0,\n",
-    "    0.17,\n",
-    "    \"Blue: Gradient <=\" + str(SCENARIO[SCENARIOID][\"maxslope_limit\"]) + \"% and water\",\n",
-    "    fontsize=8,\n",
-    ")\n",
-    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(SCENARIO[SCENARIOID][\"maxslope_limit\"])+\"% and water\", fontsize=8);\n",
-    "plt.text(\n",
-    "    0,\n",
-    "    0.12,\n",
-    "    \"Red: Gradient >\" + str(SCENARIO[SCENARIOID][\"maxslope_limit\"]) + \"%\",\n",
-    "    fontsize=8,\n",
-    ")\n",
-    "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
-    "plt.tight_layout()\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
@@ -456,7 +435,6 @@
     "    + str(SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
     "    + \"_waterlength_max\"\n",
     "    + str(WATERLENGTH_MAX)\n",
-    "    + logtextsave\n",
     ")"
    ]
   },
@@ -475,17 +453,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound_watered_diverse = {}\n",
-    "for sourcenode in allloops_bound_watered:\n",
-    "    numloops = len(allloops_bound_watered[sourcenode][\"loops\"])\n",
-    "    mask_this = [False] * numloops\n",
-    "    for i in range(numloops):\n",
-    "        pd = allloops_bound_watered[sourcenode][\"poi_diversity\"][i]\n",
-    "        if pd >= 3:\n",
-    "            mask_this[i] = True\n",
-    "    allloops_bound_watered_diverse[sourcenode] = mask_node(\n",
-    "        allloops_bound_watered[sourcenode], mask_this\n",
-    "    )"
+    "allloops_bound_sloped_watered_diverse = {}\n",
+    "for sourcenode in allloops_bound_sloped_watered:\n",
+    "    try:\n",
+    "        numloops = len(allloops_bound_sloped_watered[sourcenode][\"loops\"])\n",
+    "        mask_this = [False] * numloops\n",
+    "        for i in range(numloops):\n",
+    "            pd = allloops_bound_sloped_watered[sourcenode][\"poi_diversity\"][i]\n",
+    "            if pd >= 3:\n",
+    "                mask_this[i] = True\n",
+    "        allloops_bound_sloped_watered_diverse[sourcenode] = mask_node(\n",
+    "            allloops_bound_sloped_watered[sourcenode], mask_this\n",
+    "        )\n",
+    "    except:  # Account for 0 loop nodes\n",
+    "        allloops_bound_sloped_watered_diverse[sourcenode] = {}"
    ]
   },
   {
@@ -495,60 +476,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes, numloops_max = get_vertex_sizes(allloops_bound_watered_diverse)\n",
-    "\n",
-    "edge_colors = []\n",
-    "for e in G.es:\n",
-    "    if (\n",
-    "        e[\"max_slope\"] > SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
-    "    ):  # and not e[\"has_water\"]:\n",
-    "        edge_colors.append(\"red\")\n",
-    "    # elif e[\"max_slope\"] > SCENARIO[SCENARIOID][\"maxslope_limit\"] and e[\"has_water\"]:\n",
-    "    #     edge_colors.append(\"orange\")\n",
-    "    elif (\n",
-    "        e[\"max_slope\"] <= SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
-    "        and e[\"has_water\"]\n",
-    "        and e[\"poi_diversity\"] >= 3\n",
-    "    ):\n",
-    "        edge_colors.append(\"blue\")\n",
-    "    else:\n",
-    "        edge_colors.append(\"grey\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d90468a-ecc3-4a4c-b38f-7ea0c0db3feb",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "fig = plot_check(\n",
-    "    G,\n",
-    "    nodes_id,\n",
-    "    nodes_coords,\n",
+    "# Plot all bounded sloped loops\n",
+    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound_sloped_watered_diverse)\n",
+    "link_widths, link_colors = get_link_plotinfo(\n",
+    "    edges,\n",
+    "    var_bad=\"max_slope\",\n",
+    "    var_good=\"poi_diversity\",\n",
+    "    threshold_bad=SCENARIO[SCENARIOID][\"maxslope_limit\"],\n",
+    "    threshold_good=3,\n",
+    ")\n",
+    "fig = plot_dk_gdf(\n",
+    "    nodes,\n",
+    "    edges,\n",
+    "    scale=1,\n",
     "    vertex_size=vertex_sizes,\n",
-    "    edge_color=edge_colors,\n",
-    "    edge_width=get_edgewidth_constant(G.ecount()),\n",
+    "    vertex_color=vertex_colors,\n",
+    "    link_width=link_widths,\n",
+    "    link_color=link_colors,\n",
     ")\n",
-    "plt.text(\n",
-    "    0,\n",
-    "    0.17,\n",
-    "    \"Blue: Gradient <=\"\n",
-    "    + str(SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
-    "    + \"% and water and diverse\",\n",
-    "    fontsize=8,\n",
-    ")\n",
-    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(SCENARIO[SCENARIOID][\"maxslope_limit\"])+\"% and water\", fontsize=8);\n",
-    "plt.text(\n",
-    "    0,\n",
-    "    0.12,\n",
-    "    \"Red: Gradient >\" + str(SCENARIO[SCENARIOID][\"maxslope_limit\"]) + \"%\",\n",
-    "    fontsize=8,\n",
-    ")\n",
-    "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
-    "plt.tight_layout()\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
@@ -561,7 +506,6 @@
     "    + \"_waterlength_max\"\n",
     "    + str(WATERLENGTH_MAX)\n",
     "    + \"_poidiversity3\"\n",
-    "    + logtextsave\n",
     ")"
    ]
   }
