Start filter plot with poi diversity threshold 0

--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -331,8 +331,9 @@
     "link_widths, link_colors = get_link_plotinfo(\n",
     "    edges,\n",
     "    var_bad=\"max_slope\",\n",
-    "    var_good=None,\n",
+    "    var_good=\"poi_diversity\",\n",
     "    threshold_bad=SCENARIO[SCENARIOID][\"maxslope_limit\"],\n",
+    "    threshold_good=0,\n",
     ")\n",
     "fig = plot_dk_gdf(\n",
     "    nodes,\n",
