Add plot_dk_gdf to 02DK

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -333,12 +333,6 @@
     "# Adapted from: scripts/script05.py\n",
     "# in https://github.com/anastassiavybornova/bike-node-planner\n",
     "\n",
-    "# # remove degree 0 nodes\n",
-    "# degree_histogram = nx.degree_histogram(Gnx)\n",
-    "# nodes_to_remove = [node for node in Gnx.nodes if nx.degree(G, node) == 0]\n",
-    "# Gnx.remove_nodes_from(nodes_to_remove)\n",
-    "# degree_histogram = nx.degree_histogram(Gnx)\n",
-    "\n",
     "# using momepy to get nodes and edges gdf with corresponding labels and geometry objects\n",
     "nodes, edges = momepy.nx_to_gdf(net=Gnx, points=True, lines=True)\n",
     "\n",
@@ -360,12 +354,11 @@
     "    edges[edges[\"length_class\"] == classification].to_file(fp, index=False)\n",
     "\n",
     "\n",
-    "fig = plt.figure(\n",
-    "    figsize=(640 / PLOTPARAM[\"dpi\"], 760 / PLOTPARAM[\"dpi\"]), dpi=PLOTPARAM[\"dpi\"]\n",
+    "fig, ax = plot_dk_gdf(\n",
+    "    None,\n",
+    "    edges,\n",
+    "    link_width=0,\n",
     ")\n",
-    "ax = fig.add_axes(\n",
-    "    [-0.03, -0.03, 1.06, 1.06]\n",
-    ")  # negative because plot() introduces a padding\n",
     "\n",
     "for classification in edges.length_class.unique():\n",
     "    df = gpd.read_file(PATH[\"data_out\"] + f\"edges_{classification}.gpkg\")\n",
@@ -375,7 +368,6 @@
     "        aspect=1,\n",
     "        linewidth=PLOTPARAM[\"edge_classification_linewidths\"][classification],\n",
     "    )\n",
-    "ax.set_axis_off()\n",
     "\n",
     "xmax = 12\n",
     "axes = fig.add_axes([0.64, 0.69, 0.31, 0.25])\n",
@@ -884,12 +876,13 @@
     "    fp = PATH[\"data_out\"] + f\"faceloops_{classification}.gpkg\"\n",
     "    loops[loops[\"length_class\"] == classification].to_file(fp, index=False)\n",
     "\n",
-    "fig = plt.figure(\n",
-    "    figsize=(640 / PLOTPARAM[\"dpi\"], 760 / PLOTPARAM[\"dpi\"]), dpi=PLOTPARAM[\"dpi\"]\n",
+    "\n",
+    "fig, ax = plot_dk_gdf(\n",
+    "    None,\n",
+    "    edges,\n",
+    "    link_width=0,\n",
     ")\n",
-    "ax = fig.add_axes(\n",
-    "    [-0.03, -0.03, 1.06, 1.06]\n",
-    ")  # negative because plot() introduces a padding\n",
+    "\n",
     "for classification in loops.length_class.unique():\n",
     "    df = gpd.read_file(PATH[\"data_out\"] + f\"faceloops_{classification}.gpkg\")\n",
     "    df.plot(\n",
@@ -899,7 +892,6 @@
     "        aspect=1,\n",
     "        linewidth=0.2,\n",
     "    )\n",
-    "ax.set_axis_off()\n",
     "\n",
     "\n",
     "xmax = 42\n",
@@ -1080,12 +1072,11 @@
     "    edges[edges[\"maxslope_class\"] == classification].to_file(fp, index=False)\n",
     "\n",
     "\n",
-    "fig = plt.figure(\n",
-    "    figsize=(640 / PLOTPARAM[\"dpi\"], 760 / PLOTPARAM[\"dpi\"]), dpi=PLOTPARAM[\"dpi\"]\n",
+    "fig, ax = plot_dk_gdf(\n",
+    "    None,\n",
+    "    edges,\n",
+    "    link_width=0,\n",
     ")\n",
-    "ax = fig.add_axes(\n",
-    "    [-0.03, -0.03, 1.06, 1.06]\n",
-    ")  # negative because plot() introduces a padding\n",
     "\n",
     "for classification in edges.maxslope_class.unique():\n",
     "    df = gpd.read_file(PATH[\"data_out\"] + f\"edges_{classification}.gpkg\")\n",
@@ -1095,7 +1086,6 @@
     "        aspect=1,\n",
     "        linewidth=PLOTPARAM[\"maxslope_classification_linewidths\"][classification],\n",
     "    )\n",
-    "ax.set_axis_off()\n",
     "\n",
     "xmax = 8\n",
     "axes = fig.add_axes([0.64, 0.69, 0.31, 0.25])\n",
@@ -1254,12 +1244,11 @@
     "    edges[edges[\"poi_diversity\"] == classification].to_file(fp, index=False)\n",
     "\n",
     "\n",
-    "fig = plt.figure(\n",
-    "    figsize=(640 / PLOTPARAM[\"dpi\"], 760 / PLOTPARAM[\"dpi\"]), dpi=PLOTPARAM[\"dpi\"]\n",
+    "fig, ax = plot_dk_gdf(\n",
+    "    None,\n",
+    "    edges,\n",
+    "    link_width=0,\n",
     ")\n",
-    "ax = fig.add_axes(\n",
-    "    [-0.03, -0.03, 1.06, 1.06]\n",
-    ")  # negative because plot() introduces a padding\n",
     "\n",
     "for classification in edges.poi_diversity.unique():\n",
     "    df = gpd.read_file(PATH[\"data_out\"] + f\"edges_poidiversity{classification}.gpkg\")\n",
@@ -1269,7 +1258,6 @@
     "        aspect=1,\n",
     "        linewidth=PLOTPARAM[\"poidiversity_classification_linewidths\"][classification],\n",
     "    )\n",
-    "ax.set_axis_off()\n",
     "\n",
     "xmax = 3\n",
     "axes = fig.add_axes([0.64, 0.69, 0.31, 0.25])\n",
