Add plot_dk_inset to filter plots

--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -214,7 +214,7 @@
    "source": [
     "# Plot all loops\n",
     "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops)\n",
-    "fig = plot_dk_gdf(\n",
+    "fig, ax = plot_dk_gdf(\n",
     "    nodes,\n",
     "    edges,\n",
     "    scale=1,\n",
@@ -223,6 +223,7 @@
     "    link_width=0.3,\n",
     "    link_color=\"#444444\",\n",
     ")\n",
+    "plot_dk_inset(fig, allloops)\n",
     "fig.savefig(PATH[\"plot\"] + \"network_numloops_all\")"
    ]
   },
@@ -270,7 +271,7 @@
    "source": [
     "# Plot all bounded loops\n",
     "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound)\n",
-    "fig = plot_dk_gdf(\n",
+    "fig, ax = plot_dk_gdf(\n",
     "    nodes,\n",
     "    edges,\n",
     "    scale=1,\n",
@@ -279,6 +280,7 @@
     "    link_width=0.3,\n",
     "    link_color=\"#444444\",\n",
     ")\n",
+    "plot_dk_inset(fig, allloops_bound)\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
@@ -335,7 +337,7 @@
     "    threshold_bad=SCENARIO[SCENARIOID][\"maxslope_limit\"],\n",
     "    threshold_good=0,\n",
     ")\n",
-    "fig = plot_dk_gdf(\n",
+    "fig, ax = plot_dk_gdf(\n",
     "    nodes,\n",
     "    edges,\n",
     "    scale=1,\n",
@@ -344,6 +346,7 @@
     "    link_width=link_widths,\n",
     "    link_color=link_colors,\n",
     ")\n",
+    "plot_dk_inset(fig, allloops_bound_sloped)\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
@@ -416,7 +419,7 @@
     "    threshold_bad=SCENARIO[SCENARIOID][\"maxslope_limit\"],\n",
     "    threshold_good=1,\n",
     ")\n",
-    "fig = plot_dk_gdf(\n",
+    "fig, ax = plot_dk_gdf(\n",
     "    nodes,\n",
     "    edges,\n",
     "    scale=1,\n",
@@ -425,6 +428,7 @@
     "    link_width=link_widths,\n",
     "    link_color=link_colors,\n",
     ")\n",
+    "plot_dk_inset(fig, allloops_bound_sloped_watered)\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
@@ -477,6 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%run -i functions.py\n",
     "# Plot all bounded sloped loops\n",
     "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound_sloped_watered_diverse)\n",
     "link_widths, link_colors = get_link_plotinfo(\n",
@@ -486,7 +491,7 @@
     "    threshold_bad=SCENARIO[SCENARIOID][\"maxslope_limit\"],\n",
     "    threshold_good=3,\n",
     ")\n",
-    "fig = plot_dk_gdf(\n",
+    "fig, ax = plot_dk_gdf(\n",
     "    nodes,\n",
     "    edges,\n",
     "    scale=1,\n",
@@ -495,6 +500,7 @@
     "    link_width=link_widths,\n",
     "    link_color=link_colors,\n",
     ")\n",
+    "plot_dk_inset(fig, allloops_bound_sloped_watered_diverse)\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
