Make 02DK plot naming consistent

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-10-25"
+    "Last modified: 2024-10-27"
    ]
   },
   {
@@ -837,7 +837,7 @@
     "axes.set_xlim([0, xmax])\n",
     "axes.set_ylim([0, 1.08 * axes.get_ylim()[1]])\n",
     "\n",
-    "fig.savefig(PATH[\"plot\"] + \"faceloopstats\");"
+    "fig.savefig(PATH[\"plot\"] + \"facelooplengthhist\");"
    ]
   },
   {
@@ -1023,7 +1023,7 @@
     "axes.set_xlim([0, xmax])\n",
     "axes.set_ylim([0, 1.08 * axes.get_ylim()[1]])\n",
     "\n",
-    "fig.savefig(PATH[\"plot\"] + \"faceloops\")"
+    "fig.savefig(PATH[\"plot\"] + \"facelooplengths\")"
    ]
   },
   {
