--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -280,6 +280,7 @@
     "    link_width=0.3,\n",
     "    link_color=\"#444444\",\n",
     ")\n",
+    "plot_dk_scenariotext(ax, filterdepth=1)\n",
     "plot_dk_inset(fig, allloops_bound)\n",
     "\n",
     "fig.savefig(\n",
@@ -346,6 +347,7 @@
     "    link_width=link_widths,\n",
     "    link_color=link_colors,\n",
     ")\n",
+    "plot_dk_scenariotext(ax, filterdepth=2)\n",
     "plot_dk_inset(fig, allloops_bound_sloped)\n",
     "\n",
     "fig.savefig(\n",
@@ -410,6 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%run -i functions.py\n",
     "# Plot all bounded sloped loops\n",
     "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound_sloped_watered)\n",
     "link_widths, link_colors = get_link_plotinfo(\n",
@@ -428,7 +431,9 @@
     "    link_width=link_widths,\n",
     "    link_color=link_colors,\n",
     ")\n",
+    "plot_dk_scenariotext(ax, filterdepth=3)\n",
     "plot_dk_inset(fig, allloops_bound_sloped_watered)\n",
+    "\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
@@ -500,6 +505,7 @@
     "    link_width=link_widths,\n",
     "    link_color=link_colors,\n",
     ")\n",
+    "plot_dk_scenariotext(ax, filterdepth=4)\n",
     "plot_dk_inset(fig, allloops_bound_sloped_watered_diverse)\n",
     "\n",
     "fig.savefig(\n",
