Update face loop spec with above ideal

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-10-27"
+    "Last modified: 2024-10-28"
    ]
   },
   {
@@ -339,7 +339,7 @@
     "### Classify edge lengths (in km)\n",
     "\n",
     "edges[\"length_class\"] = edges.length.apply(\n",
-    "    lambda x: classify_edgelength(\n",
+    "    lambda x: classify_length(\n",
     "        length_km=x,\n",
     "        ideal_length_lower=LINK_LIMIT[0],\n",
     "        ideal_length_upper=LINK_LIMIT[1],\n",
@@ -726,7 +726,9 @@
     "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"below_ideal\"])\n",
     "for i in range(FACELOOP_LIMIT[0] // 1000, FACELOOP_LIMIT[1] // 1000):\n",
     "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"ideal_range\"])\n",
-    "for i in range(FACELOOP_LIMIT[1] // 1000, len(patches)):\n",
+    "for i in range(FACELOOP_LIMIT[1] // 1000, FACELOOP_LIMIT[2] // 1000):\n",
+    "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"above_ideal\"])\n",
+    "for i in range(FACELOOP_LIMIT[2] // 1000, len(patches)):\n",
     "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"too_long\"])\n",
     "\n",
     "\n",
@@ -736,7 +738,7 @@
     "axes.text(\n",
     "    (FACELOOP_LIMIT[0] + FACELOOP_LIMIT[1]) / 2000,\n",
     "    max(N) * 1.1,\n",
-    "    \"≥90%\",\n",
+    "    \"Ideal\",\n",
     "    horizontalalignment=\"center\",\n",
     "    verticalalignment=\"top\",\n",
     "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"ideal_range\"], 5),\n",
@@ -744,7 +746,7 @@
     ")\n",
     "axes.text(\n",
     "    (FACELOOP_LIMIT[0] + FACELOOP_LIMIT[1]) / 2000,\n",
-    "    max(N) * 0.1,\n",
+    "    max(N) * 0.15,\n",
     "    str(\n",
     "        round(\n",
     "            len(\n",
@@ -764,17 +766,8 @@
     "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"ideal_range\"], 5),\n",
     ")\n",
     "axes.text(\n",
-    "    FACELOOP_LIMIT[0] / 1000 * 0.95,\n",
-    "    max(N) * 1.1,\n",
-    "    \"<10%\",\n",
-    "    horizontalalignment=\"right\",\n",
-    "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"below_ideal\"], 5),\n",
-    "    fontsize=9,\n",
-    ")\n",
-    "axes.text(\n",
-    "    FACELOOP_LIMIT[0] / 1000 * 0.95,\n",
-    "    max(N) * 0.1,\n",
+    "    FACELOOP_LIMIT[0] / 1000 * 0.98,\n",
+    "    max(N) * 0.15,\n",
     "    str(\n",
     "        round(\n",
     "            len(\n",
@@ -791,27 +784,48 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"right\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"below_ideal\"], 5),\n",
+    "    color=\"#FFFFFF\",\n",
     ")\n",
     "axes.text(\n",
-    "    FACELOOP_LIMIT[1] / 1000 * 1.1,\n",
-    "    max(N) * 1.1,\n",
-    "    \"0%\",\n",
-    "    horizontalalignment=\"left\",\n",
-    "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"too_long\"], 2.2),\n",
-    "    fontsize=9,\n",
-    ")\n",
-    "axes.text(\n",
-    "    FACELOOP_LIMIT[1] / 1000 * 1.1,\n",
-    "    max(N) * 0.1,\n",
+    "    (FACELOOP_LIMIT[1] + FACELOOP_LIMIT[2]) / 2000,\n",
+    "    max(N) * 0.15,\n",
     "    str(\n",
     "        round(\n",
     "            len(\n",
     "                [\n",
     "                    i\n",
     "                    for i, x in enumerate(facelooplengths)\n",
-    "                    if (x > FACELOOP_LIMIT[1] / 1000)\n",
+    "                    if (x >= FACELOOP_LIMIT[1] / 1000 and x <= FACELOOP_LIMIT[2] / 1000)\n",
+    "                ]\n",
+    "            )\n",
+    "            / len(facelooplengths)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"above_ideal\"], 5),\n",
+    ")\n",
+    "axes.text(\n",
+    "    FACELOOP_LIMIT[2] / 1000 * 1.05,\n",
+    "    max(N) * 1.1,\n",
+    "    \"0%\",\n",
+    "    horizontalalignment=\"left\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=PLOTPARAM[\"loop_classification_colors\"][\"too_long\"],\n",
+    "    fontsize=9,\n",
+    ")\n",
+    "axes.text(\n",
+    "    FACELOOP_LIMIT[2] / 1000 * 1.05,\n",
+    "    max(N) * 0.15,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len(\n",
+    "                [\n",
+    "                    i\n",
+    "                    for i, x in enumerate(facelooplengths)\n",
+    "                    if (x > FACELOOP_LIMIT[2] / 1000)\n",
     "                ]\n",
     "            )\n",
     "            / len(facelooplengths)\n",
@@ -821,7 +835,7 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"left\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"too_long\"], 1.75),\n",
+    "    color=PLOTPARAM[\"loop_classification_colors\"][\"too_long\"],\n",
     ")\n",
     "axes.text(\n",
     "    -2,\n",
@@ -863,10 +877,11 @@
     "loops = faceloops\n",
     "\n",
     "loops[\"length_class\"] = loops.length.apply(\n",
-    "    lambda x: classify_looplength(\n",
+    "    lambda x: classify_length(\n",
     "        length_km=x,\n",
-    "        loop_length_min=FACELOOP_LIMIT[0],\n",
-    "        loop_length_max=FACELOOP_LIMIT[1],\n",
+    "        ideal_length_lower=FACELOOP_LIMIT[0],\n",
+    "        ideal_length_upper=FACELOOP_LIMIT[1],\n",
+    "        max_length=FACELOOP_LIMIT[2],\n",
     "    )\n",
     ")\n",
     "\n",
@@ -912,7 +927,9 @@
     "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"below_ideal\"])\n",
     "for i in range(FACELOOP_LIMIT[0] // 1000, FACELOOP_LIMIT[1] // 1000):\n",
     "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"ideal_range\"])\n",
-    "for i in range(FACELOOP_LIMIT[1] // 1000, len(patches)):\n",
+    "for i in range(FACELOOP_LIMIT[1] // 1000, FACELOOP_LIMIT[2] // 1000):\n",
+    "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"above_ideal\"])\n",
+    "for i in range(FACELOOP_LIMIT[2] // 1000, len(patches)):\n",
     "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"too_long\"])\n",
     "\n",
     "\n",
@@ -922,7 +939,7 @@
     "axes.text(\n",
     "    (FACELOOP_LIMIT[0] + FACELOOP_LIMIT[1]) / 2000,\n",
     "    max(N) * 1.1,\n",
-    "    \"≥90%\",\n",
+    "    \"Ideal\",\n",
     "    horizontalalignment=\"center\",\n",
     "    verticalalignment=\"top\",\n",
     "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"ideal_range\"], 5),\n",
@@ -930,7 +947,7 @@
     ")\n",
     "axes.text(\n",
     "    (FACELOOP_LIMIT[0] + FACELOOP_LIMIT[1]) / 2000,\n",
-    "    max(N) * 0.1,\n",
+    "    max(N) * 0.15,\n",
     "    str(\n",
     "        round(\n",
     "            len(\n",
@@ -950,17 +967,8 @@
     "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"ideal_range\"], 5),\n",
     ")\n",
     "axes.text(\n",
-    "    FACELOOP_LIMIT[0] / 1000 * 0.95,\n",
-    "    max(N) * 1.1,\n",
-    "    \"<10%\",\n",
-    "    horizontalalignment=\"right\",\n",
-    "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"below_ideal\"], 5),\n",
-    "    fontsize=9,\n",
-    ")\n",
-    "axes.text(\n",
-    "    FACELOOP_LIMIT[0] / 1000 * 0.95,\n",
-    "    max(N) * 0.1,\n",
+    "    FACELOOP_LIMIT[0] / 1000 * 0.98,\n",
+    "    max(N) * 0.15,\n",
     "    str(\n",
     "        round(\n",
     "            len(\n",
@@ -977,27 +985,48 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"right\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"below_ideal\"], 5),\n",
+    "    color=\"#888888\",\n",
     ")\n",
     "axes.text(\n",
-    "    FACELOOP_LIMIT[1] / 1000 * 1.1,\n",
-    "    max(N) * 1.1,\n",
-    "    \"0%\",\n",
-    "    horizontalalignment=\"left\",\n",
-    "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"too_long\"], 2.2),\n",
-    "    fontsize=9,\n",
-    ")\n",
-    "axes.text(\n",
-    "    FACELOOP_LIMIT[1] / 1000 * 1.1,\n",
-    "    max(N) * 0.1,\n",
+    "    (FACELOOP_LIMIT[1] + FACELOOP_LIMIT[2]) / 2000,\n",
+    "    max(N) * 0.15,\n",
     "    str(\n",
     "        round(\n",
     "            len(\n",
     "                [\n",
     "                    i\n",
     "                    for i, x in enumerate(facelooplengths)\n",
-    "                    if (x > FACELOOP_LIMIT[1] / 1000)\n",
+    "                    if (x >= FACELOOP_LIMIT[1] / 1000 and x <= FACELOOP_LIMIT[2] / 1000)\n",
+    "                ]\n",
+    "            )\n",
+    "            / len(facelooplengths)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"above_ideal\"], 5),\n",
+    ")\n",
+    "axes.text(\n",
+    "    FACELOOP_LIMIT[2] / 1000 * 1.05,\n",
+    "    max(N) * 1.1,\n",
+    "    \"0%\",\n",
+    "    horizontalalignment=\"left\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=PLOTPARAM[\"loop_classification_colors\"][\"too_long\"],\n",
+    "    fontsize=9,\n",
+    ")\n",
+    "axes.text(\n",
+    "    FACELOOP_LIMIT[2] / 1000 * 1.05,\n",
+    "    max(N) * 0.15,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len(\n",
+    "                [\n",
+    "                    i\n",
+    "                    for i, x in enumerate(facelooplengths)\n",
+    "                    if (x > FACELOOP_LIMIT[2] / 1000)\n",
     "                ]\n",
     "            )\n",
     "            / len(facelooplengths)\n",
@@ -1007,7 +1036,7 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"left\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"too_long\"], 1.75),\n",
+    "    color=PLOTPARAM[\"loop_classification_colors\"][\"too_long\"],\n",
     ")\n",
     "axes.text(\n",
     "    -2,\n",
