Add comparison link lengths vs faceloops

--- a/code/04_synthetic_network_analysis.ipynb
+++ b/code/04_synthetic_network_analysis.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "## To do\n",
     "- [ ] Bring into same data format as real networks\n",
-    "- [ ] Calculate linklength vs face loops (just 3*, 4*, 6* ranges)\n",
+    "- [X] Calculate linklength vs face loops (just 3*, 4*, 6* ranges)\n",
     "- [ ] Analyze: size/linklength vs loops, correspondence with scenarios\n",
     "- [ ] Analyze: border effects"
    ]
@@ -50,6 +50,7 @@
    "outputs": [],
    "source": [
     "%run -i setup_parameters.py\n",
+    "load_data = True  # Set to False if data are huge and have already been loaded\n",
     "debug = True  # Set to True for extra plots and verbosity\n",
     "\n",
     "size = 8\n",
@@ -76,6 +77,102 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d018a0f-e7a3-4638-bc72-f1457c40ba66",
+   "metadata": {},
+   "source": [
+    "## Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "588b162f-d994-4dfd-8453-c9ba5978863f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if load_data:\n",
+    "    if LOOP_LENGTH_BOUND:\n",
+    "        llb_string = \"_maxlength\" + str(LOOP_LENGTH_BOUND)\n",
+    "    else:\n",
+    "        llb_string = \"\"\n",
+    "\n",
+    "    with open(\n",
+    "        PATH[\"data_out\"]\n",
+    "        + \"loopcensus_\"\n",
+    "        + str(LOOP_NUMNODE_BOUND)\n",
+    "        + llb_string\n",
+    "        + \".pkl\",\n",
+    "        \"rb\",\n",
+    "    ) as f:\n",
+    "        allloops = pickle.load(f)\n",
+    "        alllooplengths = pickle.load(f)\n",
+    "        allloopnumnodes = pickle.load(f)\n",
+    "        allloopmaxslopes = pickle.load(f)\n",
+    "        Gnx = pickle.load(f)\n",
+    "        LOOP_NUMNODE_BOUND = pickle.load(f)\n",
+    "        nodes_id = pickle.load(f)\n",
+    "        nodes_coords = pickle.load(f)\n",
+    "        numloops = pickle.load(f)\n",
+    "        faceloops = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87d73047-3096-4074-b343-001a630d8a30",
+   "metadata": {},
+   "source": [
+    "## Analytical comparison link lengths vs faceloops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3244a07e-d441-4d49-b866-b3801debdede",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Target link length: \" + str(LINK_LIMIT[0]) + \" to \" + str(LINK_LIMIT[1]))\n",
+    "print(\"\")\n",
+    "print(\n",
+    "    \"Target face loop length: \"\n",
+    "    + str(FACELOOP_LIMIT[0])\n",
+    "    + \" to \"\n",
+    "    + str(FACELOOP_LIMIT[1])\n",
+    ")\n",
+    "for n in [3, 4, 6]:\n",
+    "    print(\n",
+    "        \" \"\n",
+    "        + str(n)\n",
+    "        + \"-gon face loop length: \"\n",
+    "        + str(n * LINK_LIMIT[0])\n",
+    "        + \" to \"\n",
+    "        + str(n * LINK_LIMIT[1])\n",
+    "    )\n",
+    "\n",
+    "for n in [3, 4]:\n",
+    "    print(\n",
+    "        \"S\"\n",
+    "        + str(n)\n",
+    "        + \"-gon face loop length: \"\n",
+    "        + str(2 * n * LINK_LIMIT[0])\n",
+    "        + \" to \"\n",
+    "        + str(n * LINK_LIMIT[1])\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19056312-f610-4c61-96cb-90a1b636013f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degree_hist = nx.degree_histogram(Gnx)\n",
+    "degree_hist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bcd4d066",
    "metadata": {},
    "source": [
@@ -90,12 +187,16 @@
    "outputs": [],
    "source": [
     "Gnx_tri = nx.triangular_lattice_graph(size, size)\n",
+    "# Add staggered triangle (all degree 3 nodes)\n",
     "\n",
     "Gnx_grid = nx.grid_2d_graph(size, size)\n",
     "pos = dict(zip(Gnx_grid, Gnx_grid))  # Source: https://stackoverflow.com/a/37106552\n",
     "nx.set_node_attributes(Gnx_grid, pos, \"pos\")\n",
+    "# Add staggered grid (all degree 3 nodes)\n",
     "\n",
-    "Gnx_hex = nx.hexagonal_lattice_graph(size, size)"
+    "Gnx_hex = nx.hexagonal_lattice_graph(size, size)\n",
+    "\n",
+    "# Add hyperuniform(-like) points voronoi tesselation? (all degree 3 nodes)"
    ]
   },
   {
