Bring synthetic networks into momepy format

--- a/code/04_synthetic_network_analysis.ipynb
+++ b/code/04_synthetic_network_analysis.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-28  \n",
-    "Last modified: 2024-10-28"
+    "Last modified: 2024-10-31"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "## To do\n",
-    "- [ ] Bring into same data format as real networks\n",
+    "- [X] Bring into same data format as real networks\n",
     "- [X] Calculate linklength vs face loops (just 3*, 4*, 6* ranges)\n",
     "- [ ] Analyze: size/linklength vs loops, correspondence with scenarios\n",
     "- [ ] Analyze: border effects"
@@ -139,7 +139,7 @@
     "    + \" to \"\n",
     "    + str(FACELOOP_LIMIT[1])\n",
     ")\n",
-    "for n in [3, 4, 6]:\n",
+    "for n in [3, 4, 6]:  # Regular grids\n",
     "    print(\n",
     "        \" \"\n",
     "        + str(n)\n",
@@ -149,7 +149,7 @@
     "        + str(n * LINK_LIMIT[1])\n",
     "    )\n",
     "\n",
-    "for n in [3, 4]:\n",
+    "for n in [3, 4]:  # Staggered grids\n",
     "    print(\n",
     "        \"S\"\n",
     "        + str(n)\n",
@@ -168,7 +168,9 @@
    "outputs": [],
    "source": [
     "degree_hist = nx.degree_histogram(Gnx)\n",
-    "degree_hist"
+    "print(list(range(len(degree_hist))))\n",
+    "print(degree_hist)\n",
+    "print(str(round(100 * degree_hist[3] / sum(degree_hist))) + \"% of nodes have degree 3.\")"
    ]
   },
   {
@@ -187,16 +189,14 @@
    "outputs": [],
    "source": [
     "Gnx_tri = nx.triangular_lattice_graph(size, size)\n",
-    "# Add staggered triangle (all degree 3 nodes)\n",
     "\n",
     "Gnx_grid = nx.grid_2d_graph(size, size)\n",
     "pos = dict(zip(Gnx_grid, Gnx_grid))  # Source: https://stackoverflow.com/a/37106552\n",
     "nx.set_node_attributes(Gnx_grid, pos, \"pos\")\n",
-    "# Add staggered grid (all degree 3 nodes)\n",
     "\n",
-    "Gnx_hex = nx.hexagonal_lattice_graph(size, size)\n",
+    "# To do: Add staggered grid (all degree 3 nodes)\n",
     "\n",
-    "# Add hyperuniform(-like) points voronoi tesselation? (all degree 3 nodes)"
+    "Gnx_hex = nx.hexagonal_lattice_graph(size, size)"
    ]
   },
   {
@@ -248,8 +248,10 @@
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(1, 3, figsize=(9, 3))\n",
+    "\n",
     "nx.draw(Gnx_tri, pos=nx.get_node_attributes(Gnx_tri, \"pos\"), ax=axs[0], node_size=8)\n",
     "nx.draw(Gnx_grid, pos=nx.get_node_attributes(Gnx_grid, \"pos\"), ax=axs[1], node_size=8)\n",
+    "# To do: Add staggered grid (all degree 3 nodes)\n",
     "nx.draw(Gnx_hex, pos=nx.get_node_attributes(Gnx_hex, \"pos\"), ax=axs[2], node_size=8)"
    ]
   },
@@ -258,38 +260,7 @@
    "id": "e50d5a2f-968f-42cc-aa16-90aa4a855ef9",
    "metadata": {},
    "source": [
-    "To do: Make it momepy, make \"pos\" the geometry"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e074203-675e-4f2b-a357-c22308bc2f60",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Gnx_tri_nodes, Gnx_tri_links = momepy.nx_to_gdf(net=Gnx_tri, points=True, lines=True)\n",
-    "Gnx_tri_nodes.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95d32f7e-6f91-434f-b1f5-769587b7c2cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Gnx_tri_nodes.geometry.x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43dcc29d-38d3-4fd8-a840-2e3950993dad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Gnx_tri_nodes.pos"
+    "Make it momepy: copy \"pos\" to the geometry (as Point)"
    ]
   },
   {
@@ -299,8 +270,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index, row in Gnx_tri_nodes.iterrows():\n",
-    "    print(row[\"pos\"], row[\"geometry\"])"
+    "Gnx_tri_nodes, Gnx_tri_links = synthnx_to_momepy(Gnx_tri)\n",
+    "Gnx_grid_nodes, Gnx_grid_links = synthnx_to_momepy(Gnx_grid)\n",
+    "Gnx_hex_nodes, Gnx_hex_links = synthnx_to_momepy(Gnx_hex)"
    ]
   },
   {
@@ -310,7 +282,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gnx_tri_nodes.set_geometry(\"pos\", drop=None, inplace=True)  # not working"
+    "fig, axs = plt.subplots(1, 3, figsize=(9, 3))\n",
+    "Gnx_tri_nodes.plot(ax=axs[0])\n",
+    "Gnx_tri_links.plot(ax=axs[0])\n",
+    "axs[0].set_axis_off()\n",
+    "Gnx_grid_nodes.plot(ax=axs[1])\n",
+    "Gnx_grid_links.plot(ax=axs[1])\n",
+    "axs[1].set_axis_off()\n",
+    "Gnx_hex_nodes.plot(ax=axs[2])\n",
+    "Gnx_hex_links.plot(ax=axs[2])\n",
+    "axs[2].set_axis_off()"
    ]
   }
  ],
