Add synthetic network link lengths

--- a/code/04_synthetic_network_analysis.ipynb
+++ b/code/04_synthetic_network_analysis.ipynb
@@ -53,8 +53,8 @@
     "load_data = True  # Set to False if data are huge and have already been loaded\n",
     "debug = True  # Set to True for extra plots and verbosity\n",
     "\n",
-    "size = 8\n",
-    "linklength = 10  # km"
+    "size = 8  # number of nodes in each dimension. Networks will have ~size^2 nodes.\n",
+    "linklength = 1000  # m"
    ]
   },
   {
@@ -189,14 +189,17 @@
    "outputs": [],
    "source": [
     "Gnx_tri = nx.triangular_lattice_graph(size, size)\n",
+    "nx.set_edge_attributes(Gnx_tri, linklength, name=\"weight\")\n",
     "\n",
     "Gnx_grid = nx.grid_2d_graph(size, size)\n",
     "pos = dict(zip(Gnx_grid, Gnx_grid))  # Source: https://stackoverflow.com/a/37106552\n",
     "nx.set_node_attributes(Gnx_grid, pos, \"pos\")\n",
+    "nx.set_edge_attributes(Gnx_grid, linklength, name=\"weight\")\n",
     "\n",
     "# To do: Add staggered grid (all degree 3 nodes)\n",
     "\n",
-    "Gnx_hex = nx.hexagonal_lattice_graph(size, size)"
+    "Gnx_hex = nx.hexagonal_lattice_graph(size, size)\n",
+    "nx.set_edge_attributes(Gnx_hex, linklength, name=\"weight\")"
    ]
   },
   {
